# knowledge-assistant

./: .gitignore  README.md  pyproject.toml
config/: agents.yaml  schemas.json  vectorstore.yaml
src/rag/: chunker.py  embeddings.py  loader.py  vectorstore.py
